load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/taylormonacelli/anyjeep/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//:anyjeep",
        "@com_github_taylormonacelli_goldbug//:goldbug",
    ],
)

go_binary(
    name = "anyjeep",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
